--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,15 @@
   margin-left: 5%;
 }
 
+.tmpMessage {
+  text-align: center;
+  font-weight: bold;
+  padding: 1em;
+  border-radius: 0;
+  box-shadow: #444 0.1em 0.1em 0.2em;
+  border-bottom: 4px solid coral;
+}
+
 @media (min-width: 1200px) {
   .app {
     max-width: 1200px;
