Add spinning search indicator

--- a/src/search.css
+++ b/src/search.css
@@ -40,6 +40,27 @@
   box-shadow: inset 0 0 2px black;
 }
 
+.searchForm > button:not(.searching) > svg:last-child {
+  display: none;
+}
+
+.searchForm > button.searching > svg:first-child {
+  display: none;
+}
+
+.searchForm > button.searching > svg:last-child {
+  animation: spin360 infinite 1.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+@keyframes spin360 {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 @media (min-width: 800px) {
   .searchForm {
     max-width: 500px;
